--- a/project-1/index.html
+++ b/project-1/index.html
@@ -4,8 +4,8 @@
     <title>My First Webpage</title>
 
     <h1>Martel Reum</h1>
-    <h2>Ice Ice Baby</h2>
-    <h3>Vanilla Ice</h3>
+    <h2>Song: Ice Ice Baby</h2>
+    <h3>Artist: Vanilla Ice</h3>
     <hr />
     <p> Alright Stop</p>
     <p>Collaborate and listen</p>
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-
+<img src="./images/ice.png" />
   </body>
-<img src:"./images/ice.png />"
+
 </html>
