--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -85,13 +85,13 @@
           <dl>
             <!-- A3: Steps 10 and 11 -->
             <dt>Garnish</dt>
-            <dd><dfn id="dfn-garnish">Garnishes</dfn> are edible items added to food dishes that provide added flavor and appealing appearances for the items being served.</dd>
+            <dd><dfn id="dfn-garnish">Garnishes-</dfn> are edible items added to food dishes that provide added flavor and appealing appearances for the items being served.</dd>
             <dt>Mandoline</dt>
-            <dd><dfn id=dfn-mandoline">Mandoline</dfn> A mandoline is a hand-operated appliance used for cutting and slicing fruits and vegetables.</dd>
+            <dd><dfn id=dfn-mandoline">Mandoline-</dfn> A mandoline is a hand-operated appliance used for cutting and slicing fruits and vegetables.</dd>
             <dt>Puree</dt>
-            <dd><dfn id="dfn-puree">Puree</dfn> To puree is to blend, grind or mash food until it is a thick, smooth, lump-free consistency.</dd>
+            <dd><dfn id="dfn-puree">Puree-</dfn> To puree is to blend, grind or mash food until it is a thick, smooth, lump-free consistency.</dd>
             <dt>Whisk</dt>
-            <dd><dfn id="dfn-whisk">Whish</dfn> The process of using a whisk to blend ingredients together or to incorporate air into ingredients to increase their volume.</dd>
+            <dd><dfn id="dfn-whisk">Whisk-</dfn> The process of using a whisk to blend ingredients together or to incorporate air into ingredients to increase their volume.</dd>
           </dl>
 
 
