--- a/assignment-3/pages/beetcake-glaze.html
+++ b/assignment-3/pages/beetcake-glaze.html
@@ -44,7 +44,7 @@
         </ol>
     </main>
     <footer>
-      <a href="index.html">Back to Home</a>
+      <a href="../index.html">Back to Home</a>
     </footer>
   </body>
 </html>
