--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -81,7 +81,7 @@
         <hr />
 
 
-        <h2>Cooking Terms: <a href="#footnotes4">4</a></h2>
+        <h2>Cooking Terms: <a href="#footnotes4"><sup>4</sup></a></h2>
           <dl>
             <!-- A3: Steps 10 and 11 -->
             <dt>Garnish</dt>
@@ -99,11 +99,12 @@
 
 
     <h2>Directions:</h2>
-      <ol>
-        <li>Cover beets with 2 inches water in a pot. Bring to a boil. Reduce heat, and simmer until very tender when pierced with the tip of a sharp paring knife, about 30 minutes. Drain. Puree beets in a food processor until smooth.</li>
-        <li>Preheat oven to 350 degrees. Whisk together flour, sugar, cocoa powder, baking soda, and 3/4 teaspoon salt in a large bowl. Whisk in eggs, water, oil, vanilla, and 1 1/4 cups beet puree (reserve remaining puree for another use).</li>
-        <li>Coat a 9-inch round cake pan (3 inches deep) with cooking spray. Line bottom with parchment, and coat with spray. Pour batter into pan. Bake until a toothpick inserted into the center comes out clean, about 45 minutes. Let cool in pan on a wire rack for 20 minutes. Turn out cake from pan, and discard parchment. Let cool completely, right side up.</li>
-        <li>Trim top of cake using a serrated knife to create a level surface. Transfer cake, cut side down, to a platter. Pour chocolate glaze over the top, and let set, about 30 minutes. Garnish with beet chips.</li>
+
+    <ol>
+      <li>Cover beets with 2 inches water in a pot. Bring to a boil. Reduce heat, and simmer until very tender when pierced with the tip of a sharp paring knife, about 30 minutes. Drain. Puree beets in a food processor until smooth.</li>
+      <li>Preheat oven to 350 degrees. Whisk together flour, sugar, cocoa powder, baking soda, and 3/4 teaspoon salt in a large bowl. Whisk in eggs, water, oil, vanilla, and 1 1/4 cups beet puree (reserve remaining puree for another use).</li>
+      <li>Coat a 9-inch round cake pan (3 inches deep) with cooking spray. Line bottom with parchment, and coat with spray. Pour batter into pan. Bake until a toothpick inserted into the center comes out clean, about 45 minutes. Let cool in pan on a wire rack for 20 minutes. Turn out cake from pan, and discard parchment. Let cool completely, right side up.</li>
+      <li>Trim top of cake using a serrated knife to create a level surface. Transfer cake, cut side down, to a platter. Pour chocolate glaze over the top, and let set, about 30 minutes. Garnish with beet chips.</li>
     <!-- A3: Step 13 -->
 
 
@@ -113,13 +114,13 @@
       <footer>
         <ol style="font-size:small">
           <!-- A3: Step 15 -->
-          <li id="footnotes1">"Chocolate Beet Cake." <i>Martha Stewart.</i> Martha Stewart, 15 Feb. 2017. Web. 26 Feb. 2017. <a href=(http://www.marthastewart.com/857644/chocolate-beet-cake) target="_blank">http://www.marthastewart.com/857644/chocolate-beet-cake </a> </li>
+         <li id="footnotes1">"Chocolate Beet Cake." <i>Martha Stewart.</i> Martha Stewart, 15 Feb. 2017. Web. 26 Feb. 2017. <a href=(http://www.marthastewart.com/857644/chocolate-beet-cake) target="_blank">http://www.marthastewart.com/857644/chocolate-beet-cake </a> </li>
 
-          <li id="footnotes2">I pretty much can't even make a decent sandwich, much less bake anything this fancy.</li>
+         <li id="footnotes2">I pretty much can't even make a decent sandwich, much less bake anything this fancy.</li>
 
-          <li id="footnotes3"><span style="color:DarkOrange">Unglazed cake can be stored at room temperature (wrapped in plastic) for up to 2 days. Glazed cake can be stored at room temperature for up to 1 day.</span></li>
+         <li id="footnotes3"><span style="color:DarkOrange">Unglazed cake can be stored at room temperature (wrapped in plastic) for up to 2 days. Glazed cake can be stored at room temperature for up to 1 day.</span></li>
 
-          <li id="footnotes4">Cooking terms provided by <a href="http://www.recipetips.com/" target="_blank">http://www.recipetips.com/</a>
+         <li id="footnotes4">Cooking terms provided by <a href="http://www.recipetips.com/" target="_blank">http://www.recipetips.com/</a>
         </ol>
       </footer>
     </body>
