--- a/assignment-4/index.html
+++ b/assignment-4/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
     <title>Course Questionnaire</title>
+    <meta charset="utf-8">
     <style>
       * {font-family:arial}
       legend {font-size:20px}
