--- a/assignment-5/index.html
+++ b/assignment-5/index.html
@@ -28,6 +28,103 @@
       background-color: powderblue;
       }
     </style>
-  </head>
-  <body>
-    this is a great day to live in america
+</head>
+  <div id="art" class="container">
+    <h1>Blame It On The Rain-Milli Vanilli</h1>
+    <img src="./images/milli-vanilli.jpg">
+
+  </div>
+
+  <div id="audio" class="container">
+    <h1>Milli Vanilli on Soundcloud</h1>
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/253516404&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  </div>
+
+  <div id="video" class="container">
+    <h1>Watch the Video</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SiZVrTaC9Pg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+
+  <div id-"lyrics" class="container">
+    <h1>Blame It On the Rain Lyrics</h1>
+      <p>
+          [Verse 1]
+    <br />
+    You said you didn't need her
+    <br />
+    You told her good-bye
+    <br />
+    You sacrificed a good love
+    <br />
+    To satisfy your pride
+    <br />
+    Now you wished that you should have her
+    <br />
+    And you feel like such a fool
+    <br />
+    You let her walk away
+    <br />
+    Now it just don't feel the same
+    </br />
+    Gotta blame it on something
+    <br />
+    Gotta blame it on something
+    <br />
+
+                [Chorus]
+    <br />
+    Blame it on the rain that was falling, falling
+    <br />
+    Blame it on the stars that shine at night
+    <br />
+    Whatever you do
+    <br />
+    Don't put the blame on you
+    <br />
+    Blame it on the rain, yeah-yeah
+    <br />
+    You can blame it on the rain
+    <br />
+
+              [Verse 2]
+    <br />
+    Should've told her you were sorry
+    <br />
+    Could have said you were wrong
+    <br />
+    But no you couldn't do that
+    <br />
+    You had to prove you were strong
+    <br />
+    If you hadn't been so blinded
+    <br />
+    She might still be there with you
+    <br />
+    You want her back again
+    <br />
+    But she just don't feel the same
+    <br />
+    Gotta blame it on something
+    <br />
+    Gotta blame it on something
+    <br />
+    </p>
+  </div>
+  <div id="copyright" class="container contact">
+    <h2> Copyright &copy;</h2>
+      <p>This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.</p>
+
+  <video src="./media/mart-logo-animated.mp4" src="./media-logo-animated.webm" poster="./mart-logo-poster.jpg" width="400" height="320" preload="auto" controls ></video>
+
+  <address>
+  <br />
+    University of Montana
+  <br />
+    School of Media Arts, McGill Hall Rm 224
+  <br />
+    32 Campus Dr
+  <br />
+    Missoula, MT 59812
+  <br />
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.167763266503!2d-113.98739678481422!3d46.86007084724102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33f19815cb%3A0x9c296b8546ca9abf!2sUniversity+of+Montana!5e0!3m2!1sen!2sus!4v1520651577339" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
