--- a/project-2/index.html
+++ b/project-2/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 
-      body {background-color: white; font-family: 'helvetica', sans-serif;}
+      body {background-color: yellow; font-family: 'helvetica', sans-serif;}
       h1 {
       color: black;
       text-align: center;
@@ -25,6 +25,8 @@
     }
     em {
        color: red;
+    }
+      a{color: purple;
     }
     </style>
 
@@ -41,10 +43,10 @@
     </div>
   <hr />
     <div id="Preparation">
-      <h2> Preparation </h2>
+      <h2> Preparation <em> or</em>  <a href="./pages/instructions.html"> Jump Straight to Instructions</a></h2>
       <ol>
         <li> Make sure your kitchen is clean</li>
-        <li> Glass of wine(mayne a bottle if you have <s>animals</s> <i>kids</i> or a <i>spouse</i>)
+        <li> Glass of wine(maybe a bottle if you have <s>animals</s> <i>kids</i> or a <i>spouse</i>)
       </ol>
     </div>
 
@@ -57,11 +59,8 @@
         <li> 1 can of green beans or whatever vegetable you prefer </li>
       </ul>
     </div>
-      <p>
-        <a href="./pages/instructions.html"> Link to Instructions</a>
-      </p>
     <hr />
-    <!-- End Ingredients, Start links to pages -->
+
     <p align="center" id="nav">
       <a href="./pages/instructions.html"> Instructions <a/> |
       <a href="./pages/about.html"> About <a/> |
