--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -12,14 +12,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color: #202020;
+      background-color: yellow;
       font-family: 'helvetica', sans-serif;
+    }
+    h1{
+      color: black;
+      text-align: center;
+    }
+    h2{
+      color: black;
+      text-align: center;
+    }
+    hr{
+      color: blue;
+    }
+    p{
+      color: teal;
+    }
+      a{color: purple;
     }
   </style>
 
   </head>
 
   <body>
-    <h1> I hate this class</h1>
+    <h1 id="about" class="page-header" align="center">About Me</h1>
+    <p id="story" class="about me"> I am Martel (Marty) Reum, I am 46 years old and I am currently a junior in the BSW program.
+      I took this course to fill my elective requirements and I have to say that this is one of my most
+      difficult, yet rewarding classes of the semester. I am not from a technology background so I have to
+      say that the learning curve has been tough.</p>
+    <br>
+    <p id="story" class="about me"> Our reservation is in dire need of social workers and that was the reasoning behind pursuing this field.
+      I look forward to assisting our people and being a part in changing the landscape of our reservation. I live in
+      an area that was just acknowledged as one of the most rural spots in the United States.  Even with the remote location
+      it is a beautiful place to live.</p>
+    <br>
+    <p id="story" class="about me"> I chose this recipe because growing up this was one of my favorite dishes.  I also like to make this dish because
+      it is fairly simple and doesn't take a lot of time to complete. It is a great dish warmed up as well and that is another
+      reason why I like this dish. </p>
+    <hr />
+      <h2 id="about" class="music" align="center"> Music:"Food for the Soul"
+    </h2>
+    <br>
+      <p>  Music is food for the soul.  I am a hopeless romantic and love to listen to sappy tunes.  Here is one of
+        my favorite artists and I hope you enjoy this soundtrack.
+    </p>
+    <br>
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/310108203&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+    </iframe>
+    <hr />
+      <h2> <center>My Employer</center>
+    </h2>
+      <address>
+        <center>Page Designer:<a href="mailto:mreum@fpcc.edu"> Marty Reum</center></a> <br>
+        <center>Fort Peck Community College</center><br>
+        <center>605 Indian Avenue<center><br>
+        <center>Poplar, Montana 59255<center><br>
+    </adress>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2663.8266858381944!2d-105.19520218476742!3d48.11357896081176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53233c297f0b77ff%3A0xb3635cb8ba5b0a98!2sFort+Peck+Community+College!5e0!3m2!1sen!2sus!4v1521914517351" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
+    </iframe>
+    <p align="center" id="nav">
+      <a href="../pages/instructions.html"> Instructions <a/> |
+      <a href="../index.html"> Home <a/> |
+      <a href="../pages/contact.html"> Contact Us <a/>
   </body>
 </html>
