--- a/project-2/pages/contact.html
+++ b/project-2/pages/contact.html
@@ -67,8 +67,12 @@
               <label for="email">Email us</label>
               <input type="text" id="email" name="email" autofocus placeholder="Your email....." required>
               <label for="comments"> Comments</label>
-              <textarea id="comments" name="comment" style="height:200px" placeholder="Tell us how we're doing..." required >
-            </textarea>
+              <textarea rows="4" cols="50" name="comment" autofocus placeholder="Tell us...">
+              </textarea>
+              <input type="submit" value="send" style="font-size:16pt;color:white;background-color:green;border:4px solid #336600;padding:5px">
+            </div>
+            </form>
+          </fieldset>
             <p align="center" id="nav">
               <a href="../pages/instructions.html"> Instructions <a/> |
               <a href="../pages/about.html"> About <a/> |
