--- a/assignment-6/index.html
+++ b/assignment-6/index.html
@@ -15,14 +15,14 @@
    <div class="line-vertical4"></div>
 
    <div class="box-1">
-      "box 1" (red)
+      The 80's rock
       <div class="box-1 inner">
-         "box 1, inner" (blue)
+         No Really They do
       </div>
    </div>
 
    <div class="box-2">
-      "box 2" (green)
+      No it really doesn't
    </div>
 
    <div class="image-box">
